--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <button class="sidebar-toggle">
       <i class="fas fa-bars"></i>
     </button>
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <img src="./logo.svg" class="logo" alt="logo">
+        <button class="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+    </aside>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
